Chef-practice.txt
chef practice history:


[root@workstation chef]# git --version
git version 1.8.3.1
[root@workstation chef]# git clone https://github.com/andranagendra/chefdk-and-starterkit.git
Cloning into 'chefdk-and-starterkit'...
remote: Counting objects: 32, done.
remote: Total 32 (delta 0), reused 0 (delta 0), pack-reused 32
Unpacking objects: 100% (32/32), done.
[root@workstation chef]# ls
chefdk-1.5.0-1.el6.x86_64.rpm  chefdk-and-starterkit
[root@workstation chef]# cd chefdk-and-starterkit/
[root@workstation chefdk-and-starterkit]# ls
chefdk_1.4.3-1_amd64.deb  chef-repo  README.md
[root@workstation chefdk-and-starterkit]# cp chef-repo /root/chef/
cp: omitting directory ‘chef-repo’
[root@workstation chefdk-and-starterkit]# cp -R chef-repo /root/chef/
[root@workstation chefdk-and-starterkit]#




[root@workstation chef-repo]# knife client list
WARN: Failed to read the private key /root/chef/chef-repo/.chef/nag9991.pem: #<Errno::ENOENT: No such file or directory @ rb_sysopen - /root/chef/chef-repo/.chef/nag9991.pem>
ERROR: Your private key could not be loaded from /root/chef/chef-repo/.chef/nag9991.pem
Check your configuration file and ensure that your private key is readable
[root@workstation chef-repo]# cp /home/ec2-user/chef-starter.zip .
[root@workstation chef-repo]# git clone https://github.com/Thinkpositvie/chefrepo.git
Cloning into 'chefrepo'...
remote: Counting objects: 3, done.
remote: Total 3 (delta 0), reused 0 (delta 0), pack-reused 0
Unpacking objects: 100% (3/3), done.
[root@workstation chef-repo]# ls
chefrepo  chef-starter.zip  cookbooks  README.md  roles
[root@workstation chef-repo]# mv chef-starter.zip /root/chef/
[root@workstation chef-repo]# cd ..
[root@workstation chef]# ls
chefdk-1.5.0-1.el6.x86_64.rpm  chefdk-and-starterkit  chef-repo  chef-starter.zip
[root@workstation chef]# rpm -e chefdk-1.5.0-1.el6.x86_64.rpm
error: package chefdk-1.5.0-1.el6.x86_64.rpm is not installed
[root@workstation chef]# chef -v
Chef Development Kit Version: 1.5.0
chef-client version: 12.21.2
delivery version: master (17c1b0fed9be4c70f69091a6d21a4cbf0df60a23)
berks version: 5.6.4
kitchen version: 1.16.0
inspec version: 1.25.1

[root@workstation chef]# rm chefdk-1.5.0-1.el6.x86_64.rpm
rm: remove regular file ‘chefdk-1.5.0-1.el6.x86_64.rpm’? ^C
[root@workstation chef]# rm chefdk-1.5.0-1.el6.x86_64.rpm  -f
[root@workstation chef]#


[root@workstation chef]# rm -f chefdk-and-starterkit/
rm: cannot remove ‘chefdk-and-starterkit/’: Is a directory
[root@workstation chef]# rm -R chefdk-and-starterkit/
rm: descend into directory ‘chefdk-and-starterkit/’? ^C
[root@workstation chef]# rm -Rf chefdk-and-starterkit


[root@workstation chef-repo]# knife client list
client
node
node1
node2
node3
node4
test5179-validator
[root@workstation chef-repo]# knife node --help
FATAL: Cannot find subcommand for: 'node --help'
Available node subcommands: (for details, knife SUB-COMMAND --help)

** NODE COMMANDS **
knife node bulk delete REGEX (options)
knife node create NODE (options)
knife node delete [NODE[,NODE]] (options)
knife node edit NODE (options)
knife node environment set NODE ENVIRONMENT
knife node from file FILE (options)
knife node list (options)
knife node run_list add [NODE] [ENTRY[,ENTRY]] (options)
knife node run_list remove [NODE] [ENTRY[,ENTRY]] (options)
knife node run_list set NODE ENTRIES (options)
knife node show NODE (options)
knife node status [<node> <node> ...]

[root@workstation chef-repo]# knife node delete node
Do you really want to delete node? (Y/N) y
Deleted node[node]
[root@workstation chef-repo]# knife node delete node1 -y
Deleted node[node1]
[root@workstation chef-repo]# knife node delete node2 -y
Deleted node[node2]
[root@workstation chef-repo]# knife node delete node3 -y
Deleted node[node3]
[root@workstation chef-repo]# knife node delete node4 -y
Deleted node[node4]
[root@workstation chef-repo]#



[root@workstation chef]# cd nag/
[root@workstation nag]# ls
[root@workstation nag]# vi file.rb
[root@workstation nag]# chef-apply file.rb
[2017-11-11T01:33:51+00:00] INFO: The plugin path /etc/chef/ohai/plugins does not exist. Skipping...
Recipe: (chef-apply cookbook)::(chef-apply recipe)
  * file[/root/nag] action create
    - create new file /root/nag
    - restore selinux security context
[root@workstation nag]# cat file.rb


file "/root/nag" do


action :create
end
[root@workstation nag]# ls /root/
anaconda-ks.cfg  chef  nag  original-ks.cfg
[root@workstation nag]# vi file1.rb
[root@workstation nag]# chef-apply file1.rb
[2017-11-11T01:36:19+00:00] INFO: The plugin path /etc/chef/ohai/plugins does not exist. Skipping...
Recipe: (chef-apply cookbook)::(chef-apply recipe)
  * file[/root/nag] action create
    - update content in file /root/nag from e3b0c4 to 683839
    --- /root/nag       2017-11-11 01:33:52.892572268 +0000
    +++ /root/.chef-nag20171111-25307-h2v6ae    2017-11-11 01:36:20.907654734 +0000
    @@ -1 +1,2 @@
    +hello nagedra good morning
    - restore selinux security context
[root@workstation nag]# cat file1.rb


file "/root/nag" do

content "hello nagedra good morning "

end


[root@workstation nag]# chef-apply user.rb
[2017-11-11T01:44:11+00:00] INFO: The plugin path /etc/chef/ohai/plugins does no                                                                                        t exist. Skipping...
[2017-11-11T01:44:13+00:00] FATAL: Stacktrace dumped to /var/chef/cache/chef-sta                                                                                        cktrace.out
[2017-11-11T01:44:13+00:00] FATAL: Please provide the contents of the stacktrace                                                                                        .out file if you file a bug report
[2017-11-11T01:44:13+00:00] FATAL: SyntaxError: user.rb:13: unknown regexp optio                                                                                        ns - bah
user.rb:13: syntax error, unexpected tSTRING_BEG, expecting keyword_end
user.rb:15: syntax error, unexpected tIDENTIFIER, expecting keyword_end
password 'nagendra'
                  ^
user.rb:15: unterminated string meets end of file
user.rb:15: syntax error, unexpected end-of-input, expecting keyword_end
[root@workstation nag]# ls
file1.rb  file.rb  user.rb
[root@workstation nag]# ls
file1.rb  file.rb  user.rb






------------------------------------------------------------------------------------------------------------------------------------------------------------------------------

chef-node setup:


[root@ip-172-31-65-89 ~]# wget https://packages.chef.io/files/stable/chef/13.6.4/el/7/chef-13.6.4-1.el7.x86_64.rpm
--2017-11-11 01:23:14--  https://packages.chef.io/files/stable/chef/13.6.4/el/7/chef-13.6.4-1.el7.x86_64.rpm
Resolving packages.chef.io (packages.chef.io)... 151.101.34.110
Connecting to packages.chef.io (packages.chef.io)|151.101.34.110|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: 50557238 (48M) [application/x-rpm]
Saving to: ‘chef-13.6.4-1.el7.x86_64.rpm’

100%[==============================================================================================================================>] 50,557,238   114MB/s   in 0.4s

2017-11-11 01:23:15 (114 MB/s) - ‘chef-13.6.4-1.el7.x86_64.rpm’ saved [50557238/50557238]

rpm -ivh chef-13.6.4-1.el7.x86_64.rpm
warning: chef-13.6.4-1.el7.x86_64.rpm: Header V4 DSA/SHA1 Signature, key ID 83ef826a: NOKEY
Preparing...                          ################################# [100%]
Updating / installing...
   1:chef-13.6.4-1.el7                ################                  ( 49%)



[root@ip-172-31-65-89 ~]# chef-client
[2017-11-11T01:27:33+00:00] WARN: *****************************************
[2017-11-11T01:27:33+00:00] WARN: Did not find config file: /etc/chef/client.rb, using command line options.
[2017-11-11T01:27:33+00:00] WARN: *****************************************
Starting Chef Client, version 13.6.4
Creating a new client identity for ip-172-31-65-89.ec2.internal using the validator key.

================================================================================
Chef encountered an error attempting to create the client "ip-172-31-65-89.ec2.internal"
================================================================================

System Info:
------------
chef_version=13.6.4
ruby=ruby 2.4.2p198 (2017-09-14 revision 59899) [x86_64-linux]
program_name=chef-client worker: ppid=1399;start=01:27:33;
executable=/opt/chef/bin/chef-client


Running handlers:
[2017-11-11T01:27:34+00:00] ERROR: Running exception handlers
[2017-11-11T01:27:34+00:00] ERROR: Running exception handlers
Running handlers complete
[2017-11-11T01:27:34+00:00] ERROR: Exception handlers complete
[2017-11-11T01:27:34+00:00] ERROR: Exception handlers complete
Chef Client failed. 0 resources updated in 01 seconds
[2017-11-11T01:27:34+00:00] FATAL: Stacktrace dumped to /var/chef/cache/chef-stacktrace.out
[2017-11-11T01:27:34+00:00] FATAL: Stacktrace dumped to /var/chef/cache/chef-stacktrace.out
[2017-11-11T01:27:34+00:00] FATAL: Please provide the contents of the stacktrace.out file if you file a bug report
[2017-11-11T01:27:34+00:00] FATAL: Please provide the contents of the stacktrace.out file if you file a bug report
[2017-11-11T01:27:34+00:00] ERROR: I can't write your private key to /etc/chef/client.pem - check permissions?
[2017-11-11T01:27:34+00:00] ERROR: I can't write your private key to /etc/chef/client.pem - check permissions?
[2017-11-11T01:27:34+00:00] FATAL: Chef::Exceptions::ChildConvergeError: Chef run process exited unsuccessfully (exit code 1)



